--- a/UI/AplicationDDD.WPF/MainWindow.xaml
+++ b/UI/AplicationDDD.WPF/MainWindow.xaml
@@ -3,10 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AplicationDDD.WPF"
+        xmlns:viewModels="clr-namespace:AplicationDDD.WPF.ViewModels"
+        xmlns:local="clr-namespace:AplicationDDD.WPF.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding Title}" Height="450" Width="800">
+    <Window.DataContext>
+        <viewModels:MainWindowViesModels></viewModels:MainWindowViesModels>
+    </Window.DataContext>
     <Grid>
+        <DataGrid DataContext="{Binding Employes}"></DataGrid>
 
     </Grid>
 </Window>
